# RobotArm

./: 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.txt
Downloads/: #displayImage.cpp#  camera.py  camera.py~  cmake_install.cmake  displayImage.cpp~  displayImage.original  motionRecognition.cpp
Downloads/my_id_robot/: main_subscriber.py~  servo_subscriber.py  servo_subscriber.py~
Downloads/my_id_robot/launch/: my_robot.launch.py
Downloads/my_id_robot/my_id_robot/: arduino_subscriber.py  main_subscriber.py  ultrasonic_publisher.py
Downloads/my_id_robot/my_id_robot/ArduinoControl/: ArduinoControl.ino
Videos/Screencasts/: Screencast from 02-29-2024 03:59:47 PM.webm  Screencast from 02-29-2024 04:09:19 PM.webm  Screencast from 02-29-2024 04:11:03 PM.webm
log/: latest_build
opencv_tutorial/: CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  cmake_install.cmake  displayImage.cpp  faceRecognition.cpp~  objectRecognition.cpp  opencv.tar
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/my_id_robot/lib/my_id_robot/: main_subscriber  my_robot_launch  opencv_subscriber  servo_subscriber  voice_publisher
ros2_ws/src/: my_id_robot_pi.tar
ros2_ws/src/my_id_robot/my_id_robot/: servo_subscriber.py  voice_publisher.sphinx.py
snap/firefox/3781/.config/: user-dirs.dirs
snap/firefox/3835/: .last_revision
snap/firefox/common/.cache/: event-sound-cache.tdb.redleader-desktop.aarch64-unknown-linux-gnu  gdk-pixbuf-loaders.cache
src/: my_id_robot.tar
src/my_id_robot/my_id_robot/: main_subscriber.py  servo_subscriber.py  voice_publisher.py~
(+7470 files in other folders)
